--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=projects;Username=root;Password=password"
+    "DefaultConnection": "Host=localhost;Port=8088;Database=my-postgres;Username=root;Password=password"
   },
+  "Jwt": {
+  "Key": "your_super_secret_key_here",
+  "Issuer": "your_issuer",
+  "Audience": "your_audience"
+},
   "AllowedHosts": "*"
 }
