--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,27 @@
-services:
-  app:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=localhost;Port=5432;Database=my-postgres;Username=root;Password=password
-    depends_on:
-      db:
-        condition: service_healthy
 
-  app:
+services:
+  db:  # Сервис БД
+    image: postgres:15
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: my-postgres
+    ports:
+      - "8088:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  app:  # Только ОДИН блок app!
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: my-postgres
-    depends_on:
-      db:
-        condition: service_healthy
     ports:
       - "5000:80"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=my-postgres;Username=root;Password=password
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
